# CRIM

./: .env  .env.template  .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: login.rs  main.rs  utilities.rs
src/core/: login.rs  message_relay.rs  messenger.rs  mod.rs  mongo.rs  structs.rs  utils.rs
src/messenger/: message_relay.rs  messenger_panel.rs  mod.rs
src/userdata/: pkey.key  profiles.json  token.json
