[package]
name = "crim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
mongodb = "2.8.1"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"


[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
