[package]
name = "crim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
base64 = "0.21.7"
colored = "2.1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
getrandom = "0.2.12"
openssl = "0.10.64"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
stopwatch = "0.0.7"
tokio = "1.36.0"


[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.mongodb]
version = "2.8.1"
features = ["tokio-sync"]
